--- a/package.json
+++ b/package.json
@@ -101,15 +101,15 @@
   "dependencies": {
     "archiver": "2.1.1",
     "aws-sdk": "^2.344.0",
-    "crash-handler": "https://github.com/stream-labs/crash-handler/releases/download/v0.0.28-electron_4/iojs-v4.1.4-crash-handler.tar.gz",
+    "crash-handler": "https://github.com/stream-labs/crash-handler/releases/download/v0.0.28-electron_4/iojs-v5.0.0-crash-handler.tar.gz",
     "electron-log": "^3.0.4",
     "electron-window-state": "5.0.3",
     "extract-zip": "^1.6.7",
     "facemask-plugin": "https://s3-us-west-2.amazonaws.com/faces-internal.streamlabs.com/facemask-plugin-deployment/facemask-plugin-0.8.9.tar.gz",
-    "font-manager": "https://github.com/stream-labs/font-manager/releases/download/v1.0.6/iojs-v4.1.4-font-manager.tar.gz",
-    "node-fontinfo": "https://github.com/stream-labs/node-fontinfo/releases/download/v0.0.10/iojs-v4.1.4-node-fontinfo.tar.gz",
-    "node-libuiohook": "https://github.com/stream-labs/node-libuiohook/releases/download/v0.0.10/iojs-v4.1.4-node-libuiohook.tar.gz",
-    "obs-studio-node": "https://obsstudionodes3.streamlabs.com/obs-studio-node-v0.4.24-iojs-v4.1.4.tar.gz",
+    "font-manager": "https://github.com/stream-labs/font-manager/releases/download/v1.0.6/iojs-v5.0.0-font-manager.tar.gz",
+    "node-fontinfo": "https://github.com/stream-labs/node-fontinfo/releases/download/v0.0.10/iojs-v5.0.0-node-fontinfo.tar.gz",
+    "node-libuiohook": "https://github.com/stream-labs/node-libuiohook/releases/download/v0.0.9/iojs-v5.0.0-node-libuiohook.tar.gz",
+    "obs-studio-node": "https://github.com/stream-labs/obs-studio-node/releases/download/v0.4.26-electron_5/obs-studio-node-us-2552-iojs-v5.0.0.tar.gz",
     "raven": "^2.6.4",
     "request": "^2.88.0",
     "rimraf": "^2.6.1",
@@ -151,7 +151,7 @@
     "css-element-queries": "1.0.2",
     "css-loader": "2.1.0",
     "devtron": "1.4.0",
-    "electron": "https://github.com/stream-labs/electron/releases/download/4.1.4-streamlabs-1/electron-4.1.4-streamlabs-1.tgz",
+    "electron": "5.0.0",
     "electron-builder": "20.38.5",
     "electron-devtools-installer": "2.2.4",
     "file-loader": "1.1.11",
